# CmakeFull

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  camera_run.sh  downstream_run.sh  downstream_run_img.sh  module_downstream_nanodet_mnn_camera_infer.sh  run.sh  test_module_cameras.sh  test_module_inference_nanodet_mnn.sh  test_module_inference_nanodet_ncnn.sh  test_module_inference_nanodet_openvino.sh
Log/: OrbbecSDK.log.txt  my_log.txt
config/: nanodet_mnn.yaml  nanodet_ncnn.yaml  nanodet_openvino.yaml  output.yaml
docs/: module_inference.md  utils.md
src/: CMakeLists.txt
src/demo/: CMakeLists.txt  main.cpp
src/module_cameras/: CMakeLists.txt
src/module_cameras/include/: camera_base.hpp  camera_orbbec.hpp
src/module_cameras/src/: camera_orbbec.cpp
src/module_downstream/: CMakeLists.txt  task.cpp  task.hpp
src/module_downstream/camera_inference/: CMakeLists.txt  task.cpp  task.hpp
src/module_downstream/img_inference/: CMakeLists.txt  task.cpp  task.hpp
src/module_inference/: CMakeLists.txt
src/module_inference/include/: model_base.hpp  model_det.hpp
src/module_inference/include/det/: model_det_zoo.hpp
src/module_inference/include/det/mnn/: nanodet_mnn.hpp
src/module_inference/include/det/ncnn/: nanodet_ncnn.hpp
src/module_inference/include/det/openvino/: nanodet_openvino.hpp
src/module_inference/src/: model_base.cpp  model_det.cpp
src/module_inference/src/det/: model_det_zoo.cpp
src/module_inference/src/det/mnn/: nanodet_mnn.cpp
src/module_inference/src/det/ncnn/: nanodet_ncnn.cpp
src/module_inference/src/det/openvino/: nanodet_openvino.cpp
src/module_utils/: CMakeLists.txt
src/module_utils/include/: safe_queue.hpp  task_queue.hpp
test/: CMakeLists.txt
test/module_cameras/: CMakeLists.txt  main.cpp
test/module_inference/: CMakeLists.txt  main.cpp
test/module_inference/mnn/: CMakeLists.txt  main.cpp
test/module_inference/ncnn/: CMakeLists.txt  main.cpp
test/module_inference/openvino/: CMakeLists.txt  main.cpp
test/module_utils/: CMakeLists.txt  main.cpp
test/test_spdlog/: CMakeLists.txt  main.cpp
